--- a/config/envs/rhdm-optaweb-trial.yaml
+++ b/config/envs/rhdm-optaweb-trial.yaml
@@ -4,7 +4,7 @@ smartrouter:
   omit: true
 ## KIE Servers BEGIN
 servers:
-  #{{ range $index, $Map := .ServerCount }}
+  #{{ range $index, $Map := .Servers }}
   - omit: true
   #{{end}}
 others:
