--- a/config/envs/rhpam-production-immutable.yaml
+++ b/config/envs/rhpam-production-immutable.yaml
@@ -1,14 +1,14 @@
 ## KIE Servers BEGIN
 servers:
   ## RANGE BEGINS
-  #{{ range $index, $Map := .ServerCount }}
+  #{{ range $index, $Map := .Servers }}
   ## PostgreSQL persistent volume claim BEGIN
   - persistentVolumeClaims:
       - metadata:
-          name: "{{.ApplicationName}}-postgresql-claim-{{$index}}"
+          name: "{{$.ApplicationName}}-postgresql-claim-{{$index}}"
           labels:
-            app: "{{.ApplicationName}}"
-            service: "{{.ApplicationName}}-postgresql-{{$index}}"
+            app: "{{$.ApplicationName}}"
+            service: "{{$.ApplicationName}}-postgresql-{{$index}}"
         spec:
           accessModes:
             - ReadWriteOnce
@@ -17,76 +17,70 @@ servers:
               storage: "1Gi"
     ## PostgreSQL persistent volume claim END
     ## KIE server build config BEGIN
+    #{{if .Build.KieServerContainerDeployment}}
     imageStreams:
       - metadata:
-          name: "{{.ApplicationName}}-kieserver-{{$index}}"
+          name: "{{$.ApplicationName}}-kieserver-{{$index}}"
           labels:
-            app: "{{.ApplicationName}}"
-            service: "{{.ApplicationName}}-kieserver-{{$index}}"
+            app: "{{$.ApplicationName}}"
+            service: "{{$.ApplicationName}}-kieserver-{{$index}}"
     buildConfigs:
       - metadata:
-          name: "{{.ApplicationName}}-kieserver-{{$index}}"
+          name: "{{$.ApplicationName}}-kieserver-{{$index}}"
           labels:
-            app: "{{.ApplicationName}}"
-            service: "{{.ApplicationName}}-kieserver-{{$index}}"
+            app: "{{$.ApplicationName}}"
+            service: "{{$.ApplicationName}}-kieserver-{{$index}}"
         spec:
           source:
             type: Git
             git:
-              uri: "{{.GitSource.URI}}"
-              ref: "{{.GitSource.Reference}}"
-            contextDir: "{{.GitSource.ContextDir}}"
+              uri: "{{.Build.GitSource.URI}}"
+              ref: "{{.Build.GitSource.Reference}}"
+            contextDir: "{{.Build.GitSource.ContextDir}}"
           strategy:
             type: Source
             sourceStrategy:
               env:
                 - name: KIE_SERVER_CONTAINER_DEPLOYMENT
-                  value: "{{.KieServerContainerDeployment}}"
+                  value: "{{.Build.KieServerContainerDeployment}}"
               forcePull: true
               from:
-                kind: ImageStreamTag
-                namespace: "openshift"
-                name: "{{.Product}}{{.Version}}-kieserver-openshift:{{.ImageTag}}"
+                kind: "{{.Build.From.Kind}}"
+                namespace: "{{.Build.From.Namespace}}"
+                name: "{{.Build.From.Name}}"
           output:
             to:
               kind: ImageStreamTag
-              name: "{{.ApplicationName}}-kieserver-{{$index}}:latest"
+              name: "{{$.ApplicationName}}-kieserver-{{$index}}:latest"
           triggers:
             - type: GitHub
               github:
-                secret: "{{.GitHubWebhookSecret}}"
+                secret: "{{.Build.GitHubWebhookSecret}}"
             - type: Generic
               generic:
-                secret: "{{.GenericWebhookSecret}}"
+                secret: "{{.Build.GenericWebhookSecret}}"
             - type: ImageChange
               imageChange: {}
             - type: ConfigChange
+    #{{end}}
     ## KIE server build config END
     ## KIE server deployment config BEGIN
     deploymentConfigs:
       - metadata:
-          name: "{{.ApplicationName}}-kieserver-{{$index}}"
+          name: "{{$.ApplicationName}}-kieserver-{{$index}}"
           labels:
-            app: "{{.ApplicationName}}"
-            service: "{{.ApplicationName}}-kieserver-{{$index}}"
+            app: "{{$.ApplicationName}}"
+            service: "{{$.ApplicationName}}-kieserver-{{$index}}"
         spec:
           replicas: 2
-          triggers:
-            - type: ImageChange
-              imageChangeParams:
-                automatic: true
-                containerNames:
-                  - "{{.ApplicationName}}-kieserver-{{$index}}"
-                from:
-                  kind: ImageStreamTag
-                  namespace: ""
-                  name: "{{.ApplicationName}}-kieserver-{{$index}}:latest"
           template:
             spec:
               containers:
-                - name: "{{.ApplicationName}}-kieserver-{{$index}}"
-                  image: "{{.ApplicationName}}-kieserver-{{$index}}"
+                - name: "{{$.ApplicationName}}-kieserver-{{$index}}"
+                  image: "{{$.ApplicationName}}-kieserver-{{$index}}"
                   env:
+                    - name: KIE_SERVER_CONTAINER_DEPLOYMENT
+                      value: "{{.Build.KieServerContainerDeployment}}"
                     - name: KIE_SERVER_ROUTER_PROTOCOL
                       value: "http"
                     - name: DATASOURCES
@@ -107,21 +101,21 @@ servers:
                     - name: RHPAM_USERNAME
                       value: "rhpam"
                     - name: RHPAM_SERVICE_HOST
-                      value: "{{.ApplicationName}}-postgresql-{{$index}}"
+                      value: "{{$.ApplicationName}}-postgresql-{{$index}}"
                     - name: RHPAM_SERVICE_PORT
                       value: "5432"
                     - name: TIMER_SERVICE_DATA_STORE
-                      value: "{{.ApplicationName}}-postgresql-{{$index}}"
+                      value: "{{$.ApplicationName}}-postgresql-{{$index}}"
                     - name: TIMER_SERVICE_DATA_STORE_REFRESH_INTERVAL
                       value: "30000"
                     ## PostgreSQL driver settings END
       ## KIE server deployment config END
       ## PostgreSQL deployment config BEGIN
       - metadata:
-          name: "{{.ApplicationName}}-postgresql-{{$index}}"
+          name: "{{$.ApplicationName}}-postgresql-{{$index}}"
           labels:
-            app: "{{.ApplicationName}}"
-            service: "{{.ApplicationName}}-postgresql-{{$index}}"
+            app: "{{$.ApplicationName}}"
+            service: "{{$.ApplicationName}}-postgresql-{{$index}}"
         spec:
           strategy:
             type: Recreate
@@ -130,7 +124,7 @@ servers:
               imageChangeParams:
                 automatic: true
                 containerNames:
-                  - "{{.ApplicationName}}-postgresql"
+                  - "{{$.ApplicationName}}-postgresql"
                 from:
                   kind: ImageStreamTag
                   namespace: "openshift"
@@ -138,17 +132,17 @@ servers:
             - type: ConfigChange
           replicas: 1
           selector:
-            deploymentConfig: "{{.ApplicationName}}-postgresql-{{$index}}"
+            deploymentConfig: "{{$.ApplicationName}}-postgresql-{{$index}}"
           template:
             metadata:
-              name: "{{.ApplicationName}}-postgresql-{{$index}}"
+              name: "{{$.ApplicationName}}-postgresql-{{$index}}"
               labels:
-                deploymentConfig: "{{.ApplicationName}}-postgresql-{{$index}}"
-                app: "{{.ApplicationName}}"
-                service: "{{.ApplicationName}}-postgresql-{{$index}}"
+                deploymentConfig: "{{$.ApplicationName}}-postgresql-{{$index}}"
+                app: "{{$.ApplicationName}}"
+                service: "{{$.ApplicationName}}-postgresql-{{$index}}"
             spec:
               containers:
-                - name: "{{.ApplicationName}}-postgresql"
+                - name: "{{$.ApplicationName}}-postgresql"
                   image: postgresql
                   imagePullPolicy: IfNotPresent
                   livenessProbe:
@@ -169,20 +163,20 @@ servers:
                       protocol: TCP
                   volumeMounts:
                     - mountPath: "/var/lib/pgsql/data"
-                      name: "{{.ApplicationName}}-postgresql-pvol"
+                      name: "{{$.ApplicationName}}-postgresql-pvol"
                   env:
                     - name: POSTGRESQL_USER
                       value: "rhpam"
                     - name: POSTGRESQL_PASSWORD
-                      value: "{{.AdminPassword}}"
+                      value: "{{$.AdminPassword}}"
                     - name: POSTGRESQL_DATABASE
                       value: "rhpam7"
                     - name: POSTGRESQL_MAX_PREPARED_TRANSACTIONS
                       value: "100"
               volumes:
-                - name: "{{.ApplicationName}}-postgresql-pvol"
+                - name: "{{$.ApplicationName}}-postgresql-pvol"
                   persistentVolumeClaim:
-                    claimName: "{{.ApplicationName}}-postgresql-claim-{{$index}}"
+                    claimName: "{{$.ApplicationName}}-postgresql-claim-{{$index}}"
     ## PostgreSQL deployment config END
     services:
       ## PostgreSQL service BEGIN
@@ -191,14 +185,14 @@ servers:
             description: The database server's port.
           labels:
             application: prod
-            service: "{{.ApplicationName}}-postgresql-{{$index}}"
-          name: "{{.ApplicationName}}-postgresql-{{$index}}"
+            service: "{{$.ApplicationName}}-postgresql-{{$index}}"
+          name: "{{$.ApplicationName}}-postgresql-{{$index}}"
         spec:
           ports:
             - port: 5432
               targetPort: 5432
           selector:
-            deploymentConfig: "{{.ApplicationName}}-postgresql-{{$index}}"
+            deploymentConfig: "{{$.ApplicationName}}-postgresql-{{$index}}"
     ## PostgreSQL service END
 #{{end}}
 ## RANGE ends
