--- a/deploy/crs/kieapp_rhdm_production-immutable.yaml
+++ b/deploy/crs/kieapp_rhdm_production-immutable.yaml
@@ -5,8 +5,9 @@ metadata:
 spec:
   environment: rhdm-production-immutable
   objects:
-    builds:
-      - kieServerContainerDeployment: rhdm-kieserver-hellorules=org.openshift.quickstarts:rhdm-kieserver-hellorules:1.4.0-SNAPSHOT
+    server:
+      build:
+        kieServerContainerDeployment: rhdm-kieserver-hellorules=org.openshift.quickstarts:rhdm-kieserver-hellorules:1.4.0-SNAPSHOT
         gitSource:
           uri: https://github.com/jboss-container-images/rhdm-7-openshift-image.git
           reference: master
