--- a/deploy/crs/kieapp_rhpam_production-immutable.yaml
+++ b/deploy/crs/kieapp_rhpam_production-immutable.yaml
@@ -5,8 +5,9 @@ metadata:
 spec:
   environment: rhpam-production-immutable
   objects:
-    builds:
-      - kieServerContainerDeployment: rhpam-kieserver-library=org.openshift.quickstarts:rhpam-kieserver-library:1.4.0-SNAPSHOT
+    server:
+      build:
+        kieServerContainerDeployment: rhpam-kieserver-library=org.openshift.quickstarts:rhpam-kieserver-library:1.4.0-SNAPSHOT
         gitSource:
           uri: https://github.com/jboss-container-images/rhpam-7-openshift-image.git
           reference: master
